[gd_scene load_steps=11 format=3 uid="uid://bwavtub8bg7xu"]

[ext_resource type="Script" path="res://Script/Player.gd" id="1_4tllj"]
[ext_resource type="PackedScene" uid="uid://bp7a48krtn5wr" path="res://HUD.tscn" id="2_2em46"]
[ext_resource type="Shape3D" uid="uid://dw8ncesrcwvkc" path="res://PlayerCapsule.tres" id="3_4ajwy"]
[ext_resource type="Script" path="res://WeaponHand.gd" id="4_lvyfy"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://d1m8d1h2qnup2" path="res://M4A1StateMachine.tres" id="6_nj4vs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sxin3"]
albedo_color = Color(0.27451, 0.490196, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fcw8c"]
material = SubResource("StandardMaterial3D_sxin3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tex2x"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1elus"]
material = SubResource("StandardMaterial3D_tex2x")

[sub_resource type="BoxShape3D" id="BoxShape3D_25lq8"]
size = Vector3(1, 0.159349, 1)

[node name="Player" type="CharacterBody3D" groups=["Persist"]]
script = ExtResource("1_4tllj")

[node name="HUD" parent="." instance=ExtResource("2_2em46")]

[node name="Hitbox" type="CollisionShape3D" parent="."]
shape = ExtResource("3_4ajwy")

[node name="BeanMesh" type="MeshInstance3D" parent="Hitbox"]
layers = 16
mesh = SubResource("CapsuleMesh_fcw8c")

[node name="BeanGoggles" type="MeshInstance3D" parent="Hitbox/BeanMesh"]
transform = Transform3D(0.580903, 0, 0, 0, 0.217956, 0, 0, 0, 0.559805, 0, 0.514024, -0.25154)
layers = 16
mesh = SubResource("BoxMesh_1elus")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.533457, 0)

[node name="Camera3D" type="Camera3D" parent="Neck"]
cull_mask = 1048559

[node name="Flashlight" type="SpotLight3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.468178, -0.944195)
light_energy = 5.0
light_cull_mask = 4294967293
shadow_enabled = true
spot_range = 12.6812
spot_angle = 42.2528

[node name="FlashlightClick" type="AudioStreamPlayer" parent="Neck/Camera3D/Flashlight"]
mix_target = 1

[node name="HipFire-Laser" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.57887)
visible = false
target_position = Vector3(0, -100, 0)
collision_mask = 12
debug_shape_custom_color = Color(1, 1, 0, 1)
debug_shape_thickness = 1

[node name="Weapons" type="Node3D" parent="Neck/Camera3D"]
script = ExtResource("4_lvyfy")

[node name="Timers" type="Node" parent="."]

[node name="ReloadTime" type="Timer" parent="Timers"]
wait_time = 2.7
one_shot = true

[node name="ReloadAnimationDur" type="Timer" parent="Timers"]
wait_time = 3.5
one_shot = true

[node name="FireRate" type="Timer" parent="Timers"]

[node name="SlideTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="SlideCD" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="SlideCT" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="WeaponSwapOutDur" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="WeaponSwapInDur" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="ADS-Laser" type="RayCast3D" parent="."]
transform = Transform3D(-0.999999, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74227e-08, 1, 4.37114e-08, -0.252928, 0.359312, -4.76837e-06)
target_position = Vector3(0, -100, 0)
collision_mask = 12
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="PickUpRange" type="Area3D" parent="."]
transform = Transform3D(1.98457, 0, 0, 0, 1.98457, 0, 0, 0, 1.98457, 0, 0, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickUpRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.435857, 0)
shape = SubResource("BoxShape3D_25lq8")

[node name="Pistol Animation Tree" type="AnimationTree" parent="."]
tree_root = ExtResource("6_nj4vs")
anim_player = NodePath("../Neck/Camera3D/Weapons/M4A1/AnimationPlayer")
parameters/conditions/Swap-in = false
parameters/conditions/Swap-out = false
parameters/M4A1States/conditions/ADS = false
parameters/M4A1States/conditions/HipFire = false
parameters/M4A1States/conditions/Moving = false
parameters/M4A1States/conditions/Reload = false
parameters/M4A1States/ADS/blend_position = 0
parameters/M4A1States/Movement/blend_position = 0

[connection signal="playerADS" from="." to="HUD" method="_on_player_player_ads"]
[connection signal="timeout" from="Timers/ReloadTime" to="." method="reload_time_timeout"]
[connection signal="timeout" from="Timers/ReloadAnimationDur" to="." method="reload_animation_dur_timeout"]
[connection signal="timeout" from="Timers/FireRate" to="." method="Firing"]
[connection signal="timeout" from="Timers/SlideTimer" to="." method="on_slide_timeout"]
[connection signal="timeout" from="Timers/WeaponSwapOutDur" to="Neck/Camera3D/Weapons" method="weaponswap_out_timeout"]
[connection signal="timeout" from="Timers/WeaponSwapInDur" to="Neck/Camera3D/Weapons" method="weaponswap_in_timeout"]
[connection signal="body_entered" from="PickUpRange" to="." method="_on_pick_up_range_body_entered"]
